; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/dvb/extr_linux_dvb.c_DecodeVoltage.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/dvb/extr_linux_dvb.c_DecodeVoltage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"dvb-voltage\00", align 1
@SEC_VOLTAGE_OFF = common dso_local global i32 0, align 4
@SEC_VOLTAGE_13 = common dso_local global i32 0, align 4
@SEC_VOLTAGE_18 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @DecodeVoltage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @DecodeVoltage(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = call i32 @var_GetInteger(i32* %4, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  switch i32 %5, label %12 [
    i32 0, label %6
    i32 13, label %8
    i32 18, label %10
  ]

6:                                                ; preds = %1
  %7 = load i32, i32* @SEC_VOLTAGE_OFF, align 4
  store i32 %7, i32* %2, align 4
  br label %14

8:                                                ; preds = %1
  %9 = load i32, i32* @SEC_VOLTAGE_13, align 4
  store i32 %9, i32* %2, align 4
  br label %14

10:                                               ; preds = %1
  %11 = load i32, i32* @SEC_VOLTAGE_18, align 4
  store i32 %11, i32* %2, align 4
  br label %14

12:                                               ; preds = %1
  %13 = load i32, i32* @SEC_VOLTAGE_OFF, align 4
  store i32 %13, i32* %2, align 4
  br label %14

14:                                               ; preds = %12, %10, %8, %6
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i32 @var_GetInteger(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
